@@ -32,7 +32,7 @@ Description: R and Armadillo integration using Rcpp
  or later, as is the rest of Rcpp.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: R (>= 2.14.0), Rcpp (>= 0.10.2)
+Depends: R (>= 2.14.0), Rcpp (>= 0.10.4.4)
 LinkingTo: Rcpp
 Suggests: RUnit
 URL: http://arma.sourceforge.net/, http://dirk.eddelbuettel.com/code/rcpp.armadillo.html, http://romainfrancois.blog.free.fr/index.php?category/R-package/RcppArmadillo
